--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
   <body>
     <!--#region header -->
     <header class="header">
-      <a class="logo" href="./index.html"
+    <nav class="heder-nav">
+      <a class="logo header-logo" href="./index.html"
         >Web<span class="logo-span">Studio</span></a
       >
-      <nav class="nav">
+      
         <ul class="meny">
-          <li class="meny-item"><a class="meny-link" href="">Studio</a></li>
+          <li class="meny-item"><a class="meny-link" href="./index.html" ">Studio</a></li>
           <li class="meny-item"><a class="meny-link" href="">Portfolio</a></li>
           <li class="meny-item"><a class="meny-link" href="">Contacts</a></li>
         </ul>
@@ -216,8 +217,8 @@
       <!-- #endregion Portfolio -->
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="footer-span">Studio</span></a
+      <a class="logo footer-logo" href="./index.html"
+        >Web<span class="logo-span">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
