--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
   <body>
     <!--#region header -->
     <header class="header">
-    <nav class="heder-nav">
-      <a class="logo header-logo" href="./index.html"
-        >Web<span class="logo-span">Studio</span></a
-      >
-      
+      <nav class="heder-nav">
+        <a class="logo header-logo" href="./index.html"
+          >Web<span class="logo-span">Studio</span></a
+        >
+
         <ul class="meny">
-          <li class="meny-item"><a class="meny-link" href="./index.html" ">Studio</a></li>
+          <li class="meny-item">
+            <a class="meny-link" href="./index.html">Studio</a>
+          </li>
           <li class="meny-item"><a class="meny-link" href="">Portfolio</a></li>
           <li class="meny-item"><a class="meny-link" href="">Contacts</a></li>
         </ul>
