--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Homework#2" />
-    <title>Homework#2</title>
+    <title>Homework#3</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,215 +17,256 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--#region header -->
-    <header class="header">
-      <nav class="heder-nav">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-span">Studio</span></a
-        >
+    <header class="section-heeder">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-span">Studio</span></a
+          >
 
-        <ul class="meny">
-          <li class="meny-item">
-            <a class="meny-link" href="./index.html">Studio</a>
-          </li>
-          <li class="meny-item"><a class="meny-link" href="">Portfolio</a></li>
-          <li class="meny-item"><a class="meny-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="contact">
-          <li class="contact-item">
-            <a class="contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact-item">
-            <a class="contact-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+          <ul class="meny">
+            <li class="meny-item">
+              <a class="meny-link" href="./index.html">Studio</a>
+            </li>
+            <li class="meny-item">
+              <a class="meny-link" href="">Portfolio</a>
+            </li>
+            <li class="meny-item"><a class="meny-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="contact">
+            <li class="contact-item">
+              <a class="contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-item">
+              <a class="contact-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!--#endregion header -->
     <main>
       <!-- #region hero -->
-      <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="btn" type="button">Order Service</button>
+      <section class="section-hero">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="btn" type="button">Order Service</button>
+        </div>
       </section>
       <!-- #endregion hero -->
       <!-- #region advantages -->
-      <section class="advantages">
-        <h2 class="advantages-title">Advantages</h2>
-        <ul class="advantages-list">
-          <li class="Advantages-item">
-            <h3 class="item-title">Strategy</h3>
-            <p class="item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="Advantages-item">
-            <h3 class="item-title">Punctuality</h3>
-            <p class="item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="Advantages-item">
-            <h3 class="item-title">Diligence</h3>
-            <p class="item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="Advantages-item">
-            <h3 class="item-title">Technologies</h3>
-            <p class="item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section-advantages">
+        <div class="container">
+          <h2 class="advantages-title visually-hidden">Advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-list-item">
+              <h3 class="item-list-title">Strategy</h3>
+              <p class="item-list-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="item-list-title">Punctuality</h3>
+              <p class="item-list-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="item-list-title">Diligence</h3>
+              <p class="item-list-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="item-list-title">Technologies</h3>
+              <p class="item-list-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- #endregion advantages -->
       <!-- #region Our Team -->
-      <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-photo"
-              src="./images/mark_guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-photo"
-              src="./images/tom_ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-photo"
-              src="./images/camila_garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-photo"
-              src="./images/daniel_wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section-team">
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-photo"
+                src="./images/mark_guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="container-team-text">
+                <h3 class="team-item-title">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-photo"
+                src="./images/tom_ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="container-team-text">
+                <h3 class="team-item-title">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-photo"
+                src="./images/camila_garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="container-team-text">
+                <h3 class="team-item-title">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-photo"
+                src="./images/daniel_wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="container-team-text">
+                <h3 class="team-item-title">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--  #endregion Our Team -->
       <!-- #region Portfolio -->
-      <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/banking_app.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Banking App</h3>
-            <p class="portfolio-item-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/cashless_payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Cashless Payment</h3>
-            <p class="portfolio-item-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/meditation_app.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Meditation App</h3>
-            <p class="portfolio-item-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/taxi_service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Taxi Service</h3>
-            <p class="portfolio-item-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/screen_illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Screen Illustrations</h3>
-            <p class="portfolio-item-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/online_courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Online Courses</h3>
-            <p class="portfolio-item-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="section-portfolio">
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/banking_app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="container-portfolio-text">
+                <h3 class="portfolio-item-title">Banking App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/cashless_payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="container-portfolio-text">
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/meditation_app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="container-portfolio-text">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/taxi_service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="container-portfolio-text">
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/screen_illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="container-portfolio-text">
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-item-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/online_courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="container-portfolio-text">
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- #endregion Portfolio -->
     </main>
     <footer class="footer">
-      <a class="logo footer-logo" href="./index.html"
-        >Web<span class="logo-span">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container container-footer">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
